Change Akamai metrics API to use domain_id instead of property ID
